# NixOs

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  configuration.nix  flake.nix  gnome.nix  grub-savedefault.nix  hardware-configuration.nix  hardware-partitions.nix  i3.nix  nvidia-offload.nix  nvidia-sync.nix  nvidia.nix  packages.nix  plasma.nix  plymouth.nix  readme.md  result  specialisation.nix  windows-mount.nix
.claude/: settings.local.json
.claude/commands/: rebuild.md  update.md
custom/adi1090x-plymouth/: default.nix
de/: default.nix  dwm.nix  fonts.nix  gnome.nix  i3.nix  plasma.nix
de/audio/: audio.nix  pipewire.nix  pulse.nix
de/autorandr/: autorandr.nix  docked_post_switch.sh
home/: .nixd.json  darwinDefaults.nix  default.nix  nixosDefaults.nix
home/martin/: default.nix  homie.nix  honey.nix  idk.nix  xps.nix
hosts/: .nixd.json
hosts/common/: default.nix  network-manager.nix  plymouth.nix
hosts/common/de/: default.nix  (+6 more)
hosts/homie/: default.nix  grafana.nix  hardware-configuration.nix  hardware-partitions.nix  jellyfin-hwaccel.nix  luks.nix  nginx-vhosts.nix  router.nix  secure-boot.nix  zfs-encryption.nix
hosts/homie-kexec/: default.nix
hosts/honey/: default.nix  hardware-configuration.nix
hosts/idk/: default.nix  hardware-configuration.nix  hardware-partitions.nix  specialisation.nix  windows-mount.nix
hosts/idk-wsl/: default.nix
hosts/installer/: default.nix  gpg-guide.nix
hosts/installer-secure/: default.nix
hosts/macbook-air/: default.nix
hosts/oracle-server/: bakule-vhost.nix  default.nix  hardware-configuration.nix  hardware-partitions.nix  minecraft-forwarding.nix  nginx-vhosts.nix  openvpn-server.nix  overrides.nix  presentation-vm.nix
hosts/presentation/: default.nix
hosts/shared/: default.nix  registry.nix
hosts/x1/: default.nix  hardware-configuration.nix
hosts/xps/: default.nix  hardware-configuration.nix  hardware-partitions.nix  kernel-audio.patch
keys/: builder-key.pub
lib/: default.nix  ssh-keys.nix
lib/darwin/: default.nix
lib/home-manager/: default.nix
lib/nixos/: default.nix
modules/: default.nix  domain.nix  grub-savedefault.nix  hostname.nix  isVM.nix  programming-languages.nix
modules/darwin/: default.nix
modules/home-manager/: default.nix  monitors.nix  p10k.nix
modules/isVM/: implementation.nix
modules/nixos/: default.nix  domain.nix  generator.nix  grub-savedefault.nix  http-services.nix  wireguard.nix
modules/programming-languages/: c.nix  csharp.nix  default.nix  js.nix  nix.nix  rust.nix  verilog.nix
overlays/: default.nix  waybar-bandwidth-fix.nix  wep_wpa_supplicant_fix.nix
pkgs/: default.nix
pkgs/adi1090x-plymouth/: default.nix
pkgs/home-assistant-electrolux-status/: default.nix
pkgs/nomos-rebuild/: default.nix  nomos-rebuild.patch
pkgs/prometheus-qbittorrent-exporter/: default.nix
pkgs/pyelectroluxocp/: default.nix
pkgs/slack-mcp-server/: default.nix
scripts/: test-overlay-packages.py
secrets/: adguard-admin-pass  dnsmasq-static-leases  grafana-secret-key  harmonia-signing-key  home-assistant-google-sa.json  jellyfin-api-key  money-machine.env  network-manager.env  nix-builder-key  nix-builder-ssh-key  nord-vpn.txt  opencode-dp-baseurl  protonvpn-wireguard-pk  qbittorrent-pass  radarr-api-key  sonarr-api-key  tailscale-exporter.env  transmission-auth  unifi-prometheus-pass  zfs-rpool-key
services/: mariadb.nix  nextcloud.nix  nginx.nix  openvpn.nix  services.nix  ssh.nix  syncthing.nix  wireguard.nix
templates/: default.nix
templates/c++/clion-project/: .gitignore  CMakeLists.txt  flake.nix
templates/c++/clion-project/src/: main.cpp
users/: default.nix  martin.nix
(+85 files in other folders)
